--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,100 @@
-<h1>Cats!</h1>
+  <h1>Eat Da Burger</h1>
 
-<h2>Cats that are not sleepy!</h2>
+  <h2>Ready to be Eaten</h2>
 
-<ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
+  <ul>
+    {{#each burger_name}}
+      {{#unless devoured}}
+        <li>
+          <p>
+            {{burger_name}}
+            <button class="change-burger" data-id="{{id}}" data-eat="{{eat}}">
+              {{#if devoured}}That was delicious!{{else}}DEVOUR!{{/if}}
+            </button>
+          </p>
+        </li>
+      {{/unless}}
+    {{/each}}
+  </ul>
 
 
-<h2>Cats that are sleepy!</h2>
+  <h2>Devoured!</h2>
 
-<ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
-    {{/if}}
-  {{/each}}
-</ul>
+  <ul>
+    {{#each burger_name}}
+      {{#if devoured}}
+        <li>
+          <p>
+            {{burger_name}}
+          </p>
+        </li>
+      {{/if}}
+    {{/each}}
+  </ul>
 
-<h2>Add a Cat</h2>
-<form class="create-form">
+  <h2>Add a Burger</h2>
+  <form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+    <div class="form-group">
+      <label for="ca">Burger Name:</label>
+      <!-- <input type="text" id="ca" name="name"> -->
+      <textarea name="name" id="ca" rows="8" cols="40"></textarea>
+    </div>
 
-  <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
+    <!-- <div class="form-group">
+      <label for="slee">Devoured?</label><br>
+      <input type="radio" name="devoured" value="1" checked> Eat!<br>
+      <input type="radio" name="devoured" value="0"> I'm Not Hungry
+    </div> -->
 
-  <button type="submit">Add Cat</button>
-</form>
+    <button type="submit">Add Burger</button>
+  </form>
+
+
+  <script>
+  $(function() {
+    $(".change-burger").on("click", function(event) {
+      var id = $(this).data("id");
+      var devoured = $(this).data("eat");
+
+      var eat = {
+        eat: devoured
+      };
+
+      // Send the PUT request.
+      $.ajax("/api/burgers/" + id, {
+        type: "PUT",
+        data: eat
+      }).then(
+        function() {
+          console.log("changed devoured to", eat);
+          // Reload the page to get the updated list
+          location.reload();
+        }
+      );
+    });
+
+    $(".create-form").on("submit", function(event) {
+      // Make sure to preventDefault on a submit event.
+      event.preventDefault();
+
+      var newBurger = {
+        burger_name: $("#ca").val().trim(),
+      };
+
+      // Send the POST request.
+      $.ajax("/api/burgers", {
+        type: "POST",
+        data: newBurger
+      }).then(
+        function() {
+          console.log("created new burger");
+          // Reload the page to get the updated list
+          location.reload();
+        }
+      );
+    });
+
+
+  });
+  </script>
