--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,44 +1,55 @@
-body{
-  background-color: yellow;
-}
+  body{
+    background-color: yellow;
+  }
 
-li {
-  padding: 5px;
-  margin: 5px;
-  background: #faebd7;
-}
+  li {
+    padding: 5px;
+    margin: 5px;
+    background: #faebd7;
+  }
 
-.label {
-  font-weight: bold;
-}
+  .label {
+    font-weight: bold;
+  }
 
-.create-update-form {
-  padding: 5px;
-  margin: 5px;
-  background: aqua;
-}
+  .create-update-form {
+    padding: 5px;
+    margin: 5px;
+    background: aqua;
+  }
 
-.form-group {
-  margin-bottom: 5px;
-}
+  .form-group {
+    margin-bottom: 5px;
+  }
 
-.header {
-  text-align: center;
-}
+  .header {
+    text-align: center;
+  }
 
-.burger-noteat {
-  width: 200px;
-  display: inline;
-}
+  /* yummy burgers */
+  .burger-noteat {
+    width: 200px;
+    display: inline;
+  }
 
-.burger-eat {
-  width: 200px;
-  display: inline;
-}
+  .change-burger{
+    position: relative;
+    left: 33%;
+  }
 
-.burger{
-  background-color: white;
-  width: 80%;
-  padding: 2%;
-  margin: 2%;
-}
+  .burger-eat {
+    width: 200px;
+    display: inline;
+  }
+
+  .burger{
+    background-color: white;
+    width: 80%;
+    padding: 2%;
+    margin: 2%;
+  }
+
+  .add-burger{
+    position: relative;
+    left: 20%;
+  }
