bug fix on put call

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
-
+<!-- set button once and call id for value -->
 
 <div class="container">
   <div class="row">
@@ -11,6 +11,7 @@
   </div>
   <div class="row">
     <div class="col-md-6 burger-noteat">
+      <h2>Yummy Burgers</h2>
       {{#each burger_name}}
         {{#unless devoured}}
           <div class="burger">
@@ -39,13 +40,12 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 add-burger">
         <h2>Add a Burger</h2>
         <form class="create-form">
           <div class="form-group">
             <label for="ca">Burger Name:</label>
-            <!-- <input type="text" id="ca" name="name"> -->
-            <textarea name="name" id="ca" rows="8" cols="40"></textarea>
+            <textarea name="name" id="ca" rows="3" cols="50"></textarea>
           </div>
           <button type="submit">Add Burger</button>
         </form>
@@ -59,7 +59,7 @@
     $(".change-burger").on("click", function(event) {
       var id = $(this).data("id");
       var devoured = $(this).data("eat");
-      //devoured = true;
+      devoured = true;
       var eat = {
         eat: devoured
       };
