--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,13 +5,12 @@
   <div class="row">
     <div class="col-md-12 header">
       <h1>Eat Da Burger</h1>
-      <!-- <img src="../public/assets/images/hamburger_2.jpeg" alt="hamburger"> -->
-      <img src="http://www.stickpng.com/assets/images/5882488ae81acb96424ffaaf.png" alt="hamburger" width="222" height="200">
+      <img src="/assets/images/hamburger.png" alt="hamburger" width="222" height="200">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6 burger-noteat">
-      <h2>Yummy Burgers</h2>
+      <h2 id="eat">Yummy Burgers</h2>
       {{#each burger_name}}
         {{#unless devoured}}
           <div class="burger">
@@ -25,9 +24,9 @@
     </div>
       <div class="col-md-6">
         <div class="burger-eat">
-          <h2>Devoured </h2>
+          <h2 id="yummy">Devoured </h2>
             {{#each burger_name}}
-              <div class="burger">
+              <div class="burger-devoured">
                 {{#if devoured}}
                   <p>
                     {{burger_name}}
@@ -41,10 +40,10 @@
 
     <div class="row">
       <div class="col-md-12 add-burger">
-        <h2>Add a Burger</h2>
+        <h2 id="eaten">Add a Burger</h2>
         <form class="create-form">
           <div class="form-group">
-            <label for="ca">Burger Name:</label>
+            <label for="ca"></label>
             <textarea name="name" id="ca" rows="3" cols="50"></textarea>
           </div>
           <button type="submit">Add Burger</button>
