--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,7 +46,7 @@
             <label for="ca"></label>
             <textarea name="name" id="ca" rows="3" cols="50"></textarea>
           </div>
-          <button type="submit">Add Burger</button>
+          <button type="submit" class="add">Add Burger</button>
         </form>
       </div>
     </div>
